<resources>
    <string name="app_name">SongOlé</string>
    <string name="saltar_intento">Saltar Intento</string>
    <string name="validar">Validar</string>
    <string name="introduzca_el_nombre_de_la_cancion">Introduzca el nombre de la cancion</string>
    <string name="escucha_atentamente">ESCUCHA ATENTAMENTE</string>
    <string name="info">info</string>
    <string name="username">Username:</string>
    <string name="info_juego">1. Hay un límite de cinco rondas por cada partida.\n2.Cada ronda se reproducirá x segundos de la canción. \n3. Si aciertas se te sumarán puntos a tu marcador.\n4.Puedes saltar las rondas para aumentar los segundos de la canción.</string>
    <string name="logo">logo</string>
    <string name="songol">SongOlé</string>
    <string name="cuenta_nueva">Cuenta Nueva</string>
    <string name="ingresa_tu_username">Ingresa tu Username</string>
</resources>